--- a/Frontend/app/src/main/res/layout/activity_menu.xml
+++ b/Frontend/app/src/main/res/layout/activity_menu.xml
@@ -102,7 +102,7 @@
              tools:ignore="HardcodedText" />
 
         <Button
-            android:id="@+id/list_btn"
+            android:id="@+id/friends_button"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
