--- a/Frontend/app/src/main/res/layout/activity_action_charles.xml
+++ b/Frontend/app/src/main/res/layout/activity_action_charles.xml
@@ -12,71 +12,108 @@
         android:id="@+id/imageView6"
         android:layout_width="389dp"
         android:layout_height="460dp"
-        app:srcCompat="@drawable/acitonbox"
-        tools:layout_editor_absoluteX="11dp"
-        tools:layout_editor_absoluteY="135dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.498"
+        app:srcCompat="@drawable/acitonbox" />
 
     <ImageButton
-        android:id="@+id/whiteshape4"
+        android:id="@+id/whiteshape2"
         android:layout_width="122dp"
         android:layout_height="109dp"
         android:background="@null"
-        app:srcCompat="@drawable/fa"
-        tools:layout_editor_absoluteX="273dp"
-        tools:layout_editor_absoluteY="176dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="0.01999998"
+        app:srcCompat="@drawable/fa" />
 
     <ImageButton
         android:id="@+id/whiteshape4"
         android:layout_width="120dp"
         android:layout_height="108dp"
         android:background="@null"
-        app:srcCompat="@drawable/stealwidget3"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="323dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintHorizontal_bias="0.04"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/stealwidget3" />
 
     <ImageButton
-        android:id="@+id/whiteshape4"
+        android:id="@+id/whiteshape7"
         android:layout_width="401dp"
         android:layout_height="113dp"
         android:background="@null"
-        app:srcCompat="@drawable/coupwidget"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="473dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.77"
+        app:srcCompat="@drawable/coupwidget" />
 
     <ImageButton
-        android:id="@+id/whiteshape4"
+        android:id="@+id/whiteshape6"
         android:layout_width="125dp"
         android:layout_height="105dp"
         android:background="@null"
-        app:srcCompat="@drawable/asswidget2"
-        tools:layout_editor_absoluteX="141dp"
-        tools:layout_editor_absoluteY="323dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/asswidget2" />
 
     <ImageButton
-        android:id="@+id/whiteshape4"
+        android:id="@+id/whiteshape1"
         android:layout_width="125dp"
         android:layout_height="110dp"
         android:background="@null"
-        app:srcCompat="@drawable/incomewidget2"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="176dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/whiteshape4"
+        app:layout_constraintHorizontal_bias="0.04"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="0.01999998"
+        app:srcCompat="@drawable/incomewidget2" />
 
     <ImageButton
-        android:id="@+id/whiteshape4"
+        android:id="@+id/whiteshape3"
         android:layout_width="124dp"
         android:layout_height="107dp"
         android:background="@null"
-        app:srcCompat="@drawable/taxwidget2"
-        tools:layout_editor_absoluteX="143dp"
-        tools:layout_editor_absoluteY="176dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintHorizontal_bias="0.96"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="0.01999998"
+        app:srcCompat="@drawable/taxwidget2" />
 
     <ImageButton
-        android:id="@+id/whiteshape4"
+        android:id="@+id/whiteshape5"
         android:layout_width="124dp"
         android:layout_height="107dp"
         android:background="@null"
-        app:srcCompat="@drawable/exchangewidget"
-        tools:layout_editor_absoluteX="271dp"
-        tools:layout_editor_absoluteY="321dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintHorizontal_bias="0.96"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/exchangewidget" />
+
+    <Button
+        android:id="@+id/back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        app:layout_constraintBottom_toTopOf="@+id/imageView6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.04"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.13999999" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
