Adding UI updates to FE

--- a/Frontend/app/src/main/res/layout/activity_afterjoinlobbycharles.xml
+++ b/Frontend/app/src/main/res/layout/activity_afterjoinlobbycharles.xml
@@ -33,11 +33,11 @@
 
     <EditText
         android:id="@+id/lobby_input"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="30dp"
-        android:text="Please Enter a Lobby ID:"
+        android:layout_width="282dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="24dp"
+        android:text=""
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView7"
