--- a/Frontend/app/src/main/res/layout/activity_settings.xml
+++ b/Frontend/app/src/main/res/layout/activity_settings.xml
@@ -11,133 +11,142 @@
     <!-- Back Button -->
 
 
-    <EditText
-        android:id="@+id/settings_username_edt"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="13dp"
-        android:layout_marginBottom="212dp"
-        android:gravity="center"
-        android:hint="Enter Username Here"
-        app:layout_constraintBottom_toTopOf="@+id/backBtn"
-        app:layout_constraintEnd_toStartOf="@+id/settings_login_btn"
+    <LinearLayout
+        android:id="@+id/linearLayout7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="268dp"
+        android:orientation="horizontal"
+        android:padding="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton"></EditText>
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Button
-        android:id="@+id/settings_login_btn"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="257dp"
-        android:layout_marginBottom="28dp"
-        android:background="@android:drawable/ic_menu_edit"
-        android:contentDescription=" "
+        <EditText
+            android:id="@+id/settings_username_edt"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginRight="20dp"
+            android:gravity="center"
+            android:hint="Enter Username Here"></EditText>
 
+        <Button
+            android:id="@+id/settings_login_btn"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/ic_menu_edit"
+            android:contentDescription=" "
+
+            android:gravity="center"
+            android:textSize="20sp"></Button>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/settings_pass_btn"
+        android:orientation="horizontal"
+        android:padding="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/settings_username_edt"
-        app:layout_constraintTop_toTopOf="parent"></Button>
-
-    <Button
-        android:id="@+id/settings_pass_btn"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="26dp"
-        android:background="@android:drawable/ic_menu_edit"
-        android:contentDescription=" "
-        android:gravity="center"
-        android:textColor="#ffffff"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/settings_email_btn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/settings_password_edt"
-        app:layout_constraintTop_toBottomOf="@+id/settings_login_btn"></Button>
-
-    <Button
-        android:id="@+id/settings_email_btn"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="242dp"
-        android:background="@android:drawable/ic_menu_edit"
-        android:contentDescription=" "
-        android:gravity="center"
-        android:textColor="#ffffff"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/settings_email_edt"
-        app:layout_constraintTop_toBottomOf="@+id/settings_pass_btn"></Button>
-
-    <EditText
-        android:id="@+id/settings_password_edt"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="26dp"
-        android:gravity="center"
-        android:hint="Enter Password Here"
-        app:layout_constraintBottom_toTopOf="@+id/settings_email_edt"
-        app:layout_constraintEnd_toStartOf="@+id/settings_pass_btn"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/settings_username_edt"></EditText>
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">
+
+        <EditText
+            android:id="@+id/settings_password_edt"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="20dp"
+            android:gravity="center"
+            android:hint="Enter Password Here"></EditText>
+
+        <Button
+            android:id="@+id/settings_pass_btn"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/ic_menu_edit"
+            android:contentDescription=" "
+            android:textColor="#ffffff"
+            android:textSize="20sp"></Button>
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/backBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="152dp"
         android:text="Back"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/settings_username_edt" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.834" />
 
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="66dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="62dp"
         android:layout_marginBottom="179dp"
         android:background="@drawable/icon_turquoise_dark"
         android:backgroundTint="#FFFFFF"
         android:padding="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/settings_username_edt"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.014"
         app:srcCompat="@drawable/settings" />
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="87dp"
-        android:layout_marginBottom="23dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="130dp"
+        android:layout_marginBottom="50dp"
         android:contentDescription=" "
-        app:layout_constraintBottom_toTopOf="@+id/settings_username_edt"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
-    <EditText
-        android:id="@+id/settings_email_edt"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="252dp"
-        android:gravity="center"
-        android:hint="Enter Email Here"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/settings_email_btn"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/settings_password_edt"></EditText>
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
+        app:layout_constraintVertical_bias="0.0">
+
+        <EditText
+            android:id="@+id/settings_email_edt"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:gravity="center"
+            android:hint="Enter Email Here"></EditText>
+
+        <Button
+            android:id="@+id/settings_email_btn"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/ic_menu_edit"
+            android:contentDescription=" "
+            android:gravity="center"
+            android:textColor="#ffffff"
+            android:textSize="20sp"></Button>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
